[CMake] Clang warnings about C code being built in C++ mode https://bugs.webkit.org/show_bug.cgi?id=245176

Reviewed by Yusuke Suzuki.

* Source/bmalloc/CMakeLists.txt: Use a flag to control how to treat C as
  CXX.
* Source/bmalloc/libpas/src/libpas/pas_utils.h: Add ignore
  atomic-alignment in some clang atomics
* Source/cmake/WebKitCompilerFlags.cmake: Set the C_AS_CXX flag for gcc
  and clang.

Canonical link: https://commits.webkit.org/256626@main